[REFACTOR] Paper 응답값 수정